<resources>
    <string name="app_name">DebitCredit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="wallet">Wallet</string>
    <string name="budget">Budget</string>
    <string name="routine">Routine</string>
    <string name="graph">Graphs</string>
    <string name="settings">Settings</string>
    <string name="wallet_image">wallet image</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="wallet_balance">wallet balance</string>
    <string name="wallet_more_menu">wallet more menu</string>
    <string name="add">add</string>
    <string name="home">Home</string>
    <string name="budget_name">Budget name</string>
    <string name="budget_balance">budget balance</string>
    <string name="budget_renovation">budget renovation</string>
    <string name="budget_more_menu">budget more menu</string>
    <string name="initial_amount">Initial Amount</string>
    <string name="take_a_picture">take a picture</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="captured_image">captured image</string>
    <string name="routine_name">Routine Name</string>
    <string name="routine_more_menu">routine more menu</string>
    <string name="routine_frequency">routine frequency</string>
    <string name="routine_start">routine start</string>
    <string name="routine_import">Routine Import</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="exchange">Exchange</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="search_transaction">search transaction</string>
    <string name="search">Search</string>
    <string name="details">details</string>
    <string name="category">Category</string>
    <string name="tag">Tag</string>
    <string name="transaction_date">transaction date</string>
    <string name="transaction_amount">transaction amount</string>
    <string name="transaction_name">transaction name</string>
    <string name="payee">Payee</string>
    <string name="add_payee">add payee</string>
    <string name="add_category">add category</string>
    <string name="extra">Extra</string>
    <string name="save_location">Save location</string>
    <string name="note">Note</string>
    <string name="image_taken">image taken</string>
    <string name="position">position</string>
    <string name="from_wallet">From wallet</string>
    <string name="to_wallet">To wallet</string>
    <string name="budget_limit">Limit</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="wallet_description">Wallet Description</string>
    <string name="add_tag">add tag</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="add_new_item">Add new item</string>
    <string name="location">Location</string>
    <string name="wallet_from">Wallet from</string>
    <string name="wallet_to">Wallet to</string>
    <string name="repeat_every">Repeat every</string>
    <string name="select_date_from">Select date from</string>
    <string name="select_date_to">Select date to</string>
    <string name="confirm_new_password">Confirm new password</string>
</resources>